add say hello macro example

--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -3,24 +3,25 @@
 resolver = "2"
 
 members = [
-        "variadic_function_example1",
-        "variadic_function_example2",
-        "variadic_function_example3",
-        "variadic_function_example4",
-        "append_tuple_example",
-        "my_vec_example",
-        "proc_macro_example",
-        "string_obfuscation_example",
-        "repeat_variable_example",
-        "no_parameter_macro_example",
-        "rust_quiz_1_example",
-        "wrong_macro_example",
-        "expand_macro_example",
-        "fragment_specifiers_example",
-        "macro_length_example",
-        "derive_hello_example",
-        "derive_hello2_example",
-        "macro_in_other_file_example",
-        "macro_stringify_example",
-        "macro_pat_param_example",
+  "variadic_function_example1",
+  "variadic_function_example2",
+  "variadic_function_example3",
+  "variadic_function_example4",
+  "append_tuple_example",
+  "my_vec_example",
+  "proc_macro_example",
+  "string_obfuscation_example",
+  "repeat_variable_example",
+  "no_parameter_macro_example",
+  "rust_quiz_1_example",
+  "wrong_macro_example",
+  "expand_macro_example",
+  "fragment_specifiers_example",
+  "macro_length_example",
+  "derive_hello_example",
+  "derive_hello2_example",
+  "macro_in_other_file_example",
+  "macro_stringify_example",
+  "macro_pat_param_example",
+  "say_hello_macro_example",
 ]
