--- a/quinn_workspace_example/Cargo.toml
+++ b/quinn_workspace_example/Cargo.toml
@@ -3,7 +3,10 @@
 resolver = "2"
 
 members = [
-        # "quinn_example",
-        "quinn_server_example",
-        "quinn_client_example",
+  # "quinn_example",
+  "quinn_server_example",
+  "quinn_client_example",
+  "quinn_chat_rcgen_example",
+  "quinn_chat_server_example",
+  "quinn_chat_client_example",
 ]
