--- a/leptos_workspace_example/leptos_use_basic/Cargo.toml
+++ b/leptos_workspace_example/leptos_use_basic/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-leptos = { version = "0.7.2", features = ["csr"] }
-leptos-use = "0.15.0"
+leptos = { version = "=0.8.0-beta", features = ["csr"] }
+leptos-use = "=0.16.0-beta"
