--- a/leptos_workspace_example/axum-js-ssr/Cargo.toml
+++ b/leptos_workspace_example/axum-js-ssr/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.7", optional = true }
+axum = { version = "0.8", optional = true }
 console_error_panic_hook = "0.1"
 console_log = "1"
 gloo-utils = "0.2"
@@ -15,24 +15,29 @@ html-escape = "0.2"
 http = "1"
 http-body-util = { version = "0.1", optional = true }
 js-sys = { version = "0.3", optional = true }
-leptos = { version = "0.7", features = ["nightly"] }
-leptos_axum = { version = "0.7", optional = true }
-leptos_meta = { version = "0.7" }
-leptos_router = { version = "0.7", features = ["nightly"] }
+leptos = { version = "0.8.0-beta", features = ["nightly"] }
+leptos_axum = { version = "0.8.0-beta", optional = true }
+leptos_meta = { version = "0.8.0-beta" }
+leptos_router = { version = "0.8.0-beta", features = ["nightly"] }
 serde = { version = "1", features = ["derive"] }
-thiserror = "1"
+thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs"], optional = true }
-wasm-bindgen = "0.2"
-web-sys = { version = "0.3", features = [ "AddEventListenerOptions", "Document", "Element", "Event", "EventListener", "EventTarget", "Performance", "Window" ], optional = true }
+wasm-bindgen = "0.2.100"
+web-sys = { version = "0.3", features = [
+  "AddEventListenerOptions",
+  "Document",
+  "Element",
+  "Event",
+  "EventListener",
+  "EventTarget",
+  "Performance",
+  "Window",
+], optional = true }
 
 [features]
-hydrate = [
-  "leptos/hydrate",
-  "dep:js-sys",
-  "dep:web-sys",
-]
+hydrate = ["leptos/hydrate", "dep:js-sys", "dep:web-sys"]
 ssr = [
   "dep:axum",
   "dep:http-body-util",
