--- a/leptos_workspace_example/axum-leptos-example/Cargo.toml
+++ b/leptos_workspace_example/axum-leptos-example/Cargo.toml
@@ -7,23 +7,23 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-axum = { version = "0.7", optional = true }
+axum = { version = "0.8", optional = true }
 console_error_panic_hook = "0.1"
 http = "1"
-leptos = { version = "0.7.2", features = ["nightly"] }
-leptos-use = { version = "0.15.3", default-features = false, features = [
+leptos = { version = "=0.8.0-beta", features = ["nightly"] }
+leptos-use = { version = "=0.16.0-beta", default-features = false, features = [
   "use_active_element",
   "docs",
 ] }
-leptos_axum = { version = "0.7.2", optional = true }
-leptos_meta = { version = "0.7.2" }
-leptos_router = { version = "0.7.2", features = ["nightly"] }
+leptos_axum = { version = "=0.8.0-beta", optional = true }
+leptos_meta = { version = "=0.8.0-beta" }
+leptos_router = { version = "=0.8.0-beta", features = ["nightly"] }
 thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs"], optional = true }
-wasm-bindgen = "=0.2.99"
-web-sys = { version = "0.3.76", features = ["HtmlElement", "DomStringMap"] }
+wasm-bindgen = "=0.2.100"
+web-sys = { version = "0.3.77", features = ["HtmlElement", "DomStringMap"] }
 
 [features]
 hydrate = ["leptos/hydrate"]
