--- a/leptos_workspace_example/leptos_for_component/Cargo.toml
+++ b/leptos_workspace_example/leptos_for_component/Cargo.toml
@@ -4,15 +4,15 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = { version = "0.4.39", features = ["serde"] }
+chrono = { version = "0.4.40", features = ["serde"] }
 console_error_panic_hook = "0.1.7"
-leptos = { version = "0.7.2", features = ["csr"] }
-reactive_stores = "0.1.2"
-reactive_stores_macro = "0.1.0"
-serde = { version = "1.0.216", features = ["derive"] }
-serde_json = "1.0.134"
+leptos = { version = "=0.8.0-beta", features = ["csr"] }
+reactive_stores = "0.1.8"
+reactive_stores_macro = "0.1.8"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 
 [dev-dependencies]
-wasm-bindgen = "0.2.99"
-wasm-bindgen-test = "0.3.49"
-web-sys = "0.3.76"
+wasm-bindgen = "0.2.100"
+wasm-bindgen-test = "0.3.50"
+web-sys = "0.3.77"
