--- a/leptos_workspace_example/leptos_hello_basic/Cargo.toml
+++ b/leptos_workspace_example/leptos_hello_basic/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-leptos = { version = "0.7.2", features = ["csr"] }
+leptos = { version = "=0.8.0-beta", features = ["csr"] }
