--- a/leptos_workspace_example/leptos_icons_basic/Cargo.toml
+++ b/leptos_workspace_example/leptos_icons_basic/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 icondata = "0.5.0"
-leptos = { version = "0.7.2", features = ["csr"] }
-leptos_icons = "0.4.0"
+leptos = { version = "=0.8.0-beta", features = ["csr"] }
+leptos_icons = "0.5.0"
