--- a/leptos_workspace_example/leptos_params_and_queries/Cargo.toml
+++ b/leptos_workspace_example/leptos_params_and_queries/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-leptos = { version = "0.7.2", features = ["csr"] }
-leptos_router = "0.7.2"
+leptos = { version = "=0.8.0-beta", features = ["csr"] }
+leptos_router = "=0.8.0-beta"
