add compile feature

--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -12,3 +12,15 @@ members = [
         "dioxus_tui_example",
         "dioxus_fermi_example",
 ]
+
+[profile]
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
