--- a/dioxus_workspace_example/dioxus_fullstack_example/Cargo.toml
+++ b/dioxus_workspace_example/dioxus_fullstack_example/Cargo.toml
@@ -2,15 +2,11 @@
 name = "dioxus_fullstack_example"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 dioxus = "0.6.3"
-dioxus-fullstack = "0.6.3"
-
 
 [features]
 default = []
-ssr = ["dioxus-fullstack/axum"]
-web = ["dioxus-fullstack/web"]
+web = ["dioxus/web"]
