delete some code

--- a/dioxus_workspace_example/dioxus_liveview_example/Cargo.toml
+++ b/dioxus_workspace_example/dioxus_liveview_example/Cargo.toml
@@ -10,3 +10,7 @@ axum = "0.8.1"
 dioxus = "0.6.3"
 dioxus-liveview = { version = "0.6.2", features = ["axum"] }
 tokio = { version = "1.44.1", features = ["full"] }
+
+[features]
+default = []
+web = ["dioxus/web"]
