--- a/leptos_workspace_example/leptos_ws_axum_example/Cargo.toml
+++ b/leptos_workspace_example/leptos_ws_axum_example/Cargo.toml
@@ -13,12 +13,12 @@ console_error_panic_hook = "0.1"
 console_log = "1"
 futures = { version = "0.3.31", default-features = false, optional = true }
 http = "1.3"
-leptos = { version = "0.7" }
-leptos_axum = { version = "0.7", optional = true }
+leptos = { version = "0.8.0-beta" }
+leptos_axum = { version = "0.8.0-beta", optional = true }
 leptos_ws = "0.7"
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
-server_fn = "0.7"
+server_fn = "0.8.0-beta"
 simple_logger = "5"
 tokio = { version = "1.44", features = [
   "rt",
