--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 
 members = [
   "dioxus_example",
-  "dioxus_web_basic_example",
+  # "dioxus_web_basic_example",
   # "dioxus_liveview_example",
   "dioxus_fullstack_example",
   "dioxus_desktop_example",
