--- a/dioxus_workspace_example/dioxus_web_basic_example/Cargo.toml
+++ b/dioxus_workspace_example/dioxus_web_basic_example/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 dioxus = "0.6.3"
 dioxus-web = "0.6.3"
 fermi = "0.4.3"
+
+[features]
+default = []
+server = ["dioxus/server"]
+web = ["dioxus/web"]
