add web_sys to dioxus code

--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -11,7 +11,8 @@ members = [
   # "dioxus_mobile_example",
   # "dioxus_tui_example",
   # "dioxus_fermi_example",
-  "dioxus_hot_dog_example", "axum_dioxus_ssr_example",
+  "dioxus_hot_dog_example",
+  "axum_dioxus_ssr_example",
 ]
 
 [profile]
