--- a/dioxus_workspace_example/axum_dioxus_ssr_example/Cargo.toml
+++ b/dioxus_workspace_example/axum_dioxus_ssr_example/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 axum = "0.8"
 dioxus = { version = "0.6", features = ["ssr"] }
 dioxus-ssr = "0.6"
+http = "1.3.1"
 tokio = { version = "1.44", features = ["full"] }
+tower-http = { version = "0.6.2", features = ["fs"] }
 web-sys = { version = "0.3.77", features = [
   "Document",
   "console",
