--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -14,6 +14,7 @@ members = [
   "dioxus_hot_dog_example",
   "axum_dioxus_ssr_example",
   "dioxus_web_sys_example",
+  "axum_dioxus_fullstack_example",
 ]
 
 [profile]
