--- a/dioxus_workspace_example/dioxus_hot_dog_example/Cargo.toml
+++ b/dioxus_workspace_example/dioxus_hot_dog_example/Cargo.toml
@@ -2,7 +2,6 @@
 name = "dioxus_hot_dog_example"
 version = "0.1.0"
 edition = "2021"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -13,7 +12,7 @@ web-sys = { version = "0.3.60", features = ["console"], optional = true }
 
 [features]
 default = ["web"]
-web = ["dioxus/web", "dep:web-sys"]
-desktop = ["dioxus/desktop"]
+web = ["dioxus/web", "dep:web-sys", "dep:tokio"]
+desktop = ["dioxus/desktop", "dep:web-sys", "dep:tokio"]
 mobile = ["dioxus/mobile"]
 server = ["dioxus/server", "dep:tokio"]
