--- a/leptos_workspace_example/cargo-leptos-basic-example/Cargo.toml
+++ b/leptos_workspace_example/cargo-leptos-basic-example/Cargo.toml
@@ -10,10 +10,10 @@ crate-type = ["cdylib", "rlib"]
 axum = { version = "0.8", optional = true }
 console_error_panic_hook = "0.1"
 http = "1"
-leptos = { version = "0.7", features = ["nightly"] }
-leptos_axum = { version = "0.7", optional = true }
-leptos_meta = { version = "0.7" }
-leptos_router = { version = "0.7", features = ["nightly"] }
+leptos = { version = "0.8.0-beta", features = ["nightly"] }
+leptos_axum = { version = "0.8.0-beta", optional = true }
+leptos_meta = { version = "0.8.0-beta" }
+leptos_router = { version = "0.8.0-beta", features = ["nightly"] }
 thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
 tower = { version = "0.5", optional = true }
