--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
   "deno_core_add_runtime_example",
   "deno_core_add_filesystem_example",
   "deno_core_impl_fetch_example",
+  "deno_core_support_typescript_example",
 ]
