--- a/leptos_workspace_example/leptos_ws_axum_example/Cargo.toml
+++ b/leptos_workspace_example/leptos_ws_axum_example/Cargo.toml
@@ -28,6 +28,7 @@ tokio = { version = "1.44", features = [
 tokio-stream = { version = "0.1", optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs"], optional = true }
+tower_governor = { version = "0.7", optional = true }
 wasm-bindgen = "=0.2.100"
 
 [features]
@@ -40,6 +41,7 @@ ssr = [
   "dep:tower",
   "dep:tower-http",
   "dep:leptos_axum",
+  "dep:tower_governor",
   "leptos/ssr",
   "leptos_ws/ssr",
   "leptos_ws/axum",
