--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -51,10 +51,10 @@ members = [
   "libp2p_public_key_alloy_address_example",
   "libp2p_peer_id_generation_example",
   "libp2p_kademlia_json_example",
-  "libp2p_lookup",
+  # "libp2p_lookup",
   "libp2p_pnet_presharedkey_example",
   "libp2p_client_reconnection_example",
-  "libp2p_perf_example",
+  # "libp2p_perf_example",
   "libp2p_p2prpc_example",
   "poc_libpp2p_kademlia_example",
   "libp2p_parse_dns_multiaddress_example",
