--- a/opentelemetry_otlp_example/Cargo.toml
+++ b/opentelemetry_otlp_example/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-opentelemetry = "0.21.0"
-opentelemetry-otlp = { version = "0.14.0", features = ["tokio", "metrics", "tonic"] }
-opentelemetry_api = "0.20.0"
-opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "metrics"] }
-tonic = "0.9.2"
+opentelemetry = "0.29.1"
+opentelemetry-otlp = { version = "0.29.0", features = ["tokio", "metrics", "grpc-tonic"] }
+opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio", "metrics"] }
+tonic = "0.12"
