--- a/clickhouse_workspace_example/clickhouse_example/Cargo.toml
+++ b/clickhouse_workspace_example/clickhouse_example/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clickhouse = "0.8.1"
+clickhouse = "0.13.2"
 serde = "1.0.130"
 serde_derive = "1.0.130"
 tokio = { version = "1.12.0", features = ["full"] }
+
+[dev-dependencies]
+clickhouse = { version = "0.13.2", features = ["test-util"] }
