--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -199,4 +199,5 @@ members = [
   "tokio_async_loop_mut_variable_example",
   "tokio_task_id_example",
   "tokio_once_cell_mutex_timeout_example",
+  "once_cell_const_new_example",
 ]
