--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -63,6 +63,7 @@ members = [
   "axum_sub_state_example",
   "axum_aide_example",
   "axum_serve_wasm_example",
+  "axum_tower_otel_http_example",
 ]
 
 exclude = [
