add axum react ssr example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -64,6 +64,7 @@ members = [
   "axum_aide_example",
   "axum_serve_wasm_example",
   "axum_tower_otel_http_example",
+  "axum_react_ssr_example",
 ]
 
 exclude = [
