--- a/alloy_woekspace_example/geth_transaction_json_rpc_example/Cargo.toml
+++ b/alloy_woekspace_example/geth_transaction_json_rpc_example/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest = { version = "0.12.15", features = ["json"] }
-serde_json = "1.0.140"
-tokio = { version = "1.44.2", features = ["full"] }
+reqwest = { version = "0.12", features = ["json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.45", features = ["full"] }
+dotenv = "0.15.0"
