add libp2p debug listener example

--- a/libp2p_workspace_example/Cargo.toml
+++ b/libp2p_workspace_example/Cargo.toml
@@ -72,4 +72,5 @@ members = [
   "libp2p_tuono_c1_example",
   "libp2p_tuono_c2_example",
   "libp2p_multiaddr_example",
+  "libp2p_debug_listener_example",
 ]
