--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -11,4 +11,5 @@ members = [
   "deno_core_impl_fetch_example",
   "deno_core_support_typescript_example",
   "build_rs_deno_core_support_typescript_example",
+  "deno_runtime_example",
 ]
