--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -12,4 +12,5 @@ members = [
   "deno_core_support_typescript_example",
   "build_rs_deno_core_support_typescript_example",
   "deno_runtime_example",
+  "v8_promise_example",
 ]
