--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -15,4 +15,5 @@ members = [
   "solana_rpc_getslot_example",
   "solana_rpc_genesis_block_example",
   "solana_rpc_get_latest_block_hash_example",
+  "cnft_example",
 ]
