--- a/solana_workspace_example/solana_raw_integer_example/Cargo.toml
+++ b/solana_workspace_example/solana_raw_integer_example/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "all_program_id_example"
+name = "solana_raw_integer_example"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-solana-client = "2.3.3"
+borsh = "1.5.7"
+borsh-derive = "1.5.7"
 solana-program = "2.3.0"
-solana-sdk = "2.3.1"
