--- a/solana_workspace_example/solana_raw_integer_example/Cargo.toml
+++ b/solana_workspace_example/solana_raw_integer_example/Cargo.toml
@@ -3,7 +3,22 @@ name = "solana_raw_integer_example"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "lib"]
+
 [dependencies]
 borsh = "1.5.7"
 borsh-derive = "1.5.7"
 solana-program = "2.3.0"
+
+[features]
+custom-heap = []
+custom-panic = []
+
+
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
+opt-level = "z"
+panic = "abort"
