--- a/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_network_v2/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-memstore = { git = "https://github.com/databendlabs/openraft" }
+mem-log = { path = "../mem-log", features = [] }
 openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
-tokio = { version = "1.44.2", features = ["full"] }
+tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
