--- a/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
@@ -8,17 +8,17 @@ bincode = "2.0.1"
 clap = { version = "4.5.36", features = ["derive", "env"] }
 dashmap = "6.1.0"
 futures = "0.3.31"
-memstore = { git = "https://github.com/databendlabs/openraft" }
+mem-log = { path = "../mem-log"}
 openraft = { git = "https://github.com/databendlabs/openraft", features = ["type-alias"] }
-prost = "0.13.5"
+prost = "0.13.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 tokio = { version = "1.44.2", features = ["full"] }
-tonic = "0.13.0"
-tonic-build = "0.13.0"
+tonic = "0.12.3"
+tonic-build = "0.12.3"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [build-dependencies]
-prost-build = "0.13.5"
-tonic-build = "0.13.0"
+prost-build = "0.13.4"
+tonic-build = "0.12.3"
