--- a/openraft_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_poem_tarpc_rocksdb_example/Cargo.toml
@@ -7,25 +7,27 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.98"
-chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
+async-trait = "0.1.88"
+byteorder = "1.5.0"
+chitchat = { git = "https://github.com/quickwit-oss/chitchat" }
 clap = { version = "4.5.41", features = ["derive", "env"] }
 console-subscriber = "0.4.1"
 cool-id-generator = "1.0.1"
 env_logger = "0.11.8"
+futures = "0.3.31"
+itertools = "0.13.0"
 once_cell = "1.21.3"
+openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
+openraft-rocksstore = { path = "../rocksstore" }
 poem = "3.1.11"
 poem-openapi = { version = "5", features = ["swagger-ui"] }
+reqwest = { version = "0.12", features = ["json"] }
+rocksdb = "0.23.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+tarpc = { version = "0.36.0", features = ["full"] }
+thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-futures = "0.3.31"
-tarpc = { version = "0.36.0", features = ["full"] }
-byteorder = "1.5.0"
-reqwest = { version = "0.12", features = ["json"] }
-rocksdb = "0.23.0"
-thiserror = "2.0.12"
-async-trait = "0.1.88"
-openraft-rocksstore = { path = "../rocksstore" }
+uuid = { version = "1.11.0", features = ["v4", "serde"] }
