--- a/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
@@ -12,24 +12,36 @@ aide = { version = "0.14.2", features = [
   "macros",
 ] }
 anyhow = "1"
+async-trait = "0.1"
 axum = { version = "0.8", features = ["macros"] }
+bincode = "2.0.0-rc.3"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat" }
+chrono = { version = "0.4", features = ["serde"] }
+clap = { version = "4.0", features = ["derive"] }
 cool-id-generator = "1"
+itertools = "0.12"
+mem-log = { path = "../mem-log", features = [] }
 openraft = { git = "https://github.com/databendlabs/openraft", features = [
   "serde",
   "type-alias",
 ] }
+rand = "0.8"
+reqwest = { version = "0.12", features = ["json"] }
 schemars = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 structopt = "0.3"
+uuid = { version = "1.0", features = ["v4", "serde"] }
 tokio = { version = "1.46.1", features = [
   "net",
   "sync",
   "rt-multi-thread",
   "macros",
   "time",
+  "io-util",
+  "signal",
 ] }
+tracing = "0.1"
 tracing-subscriber = "0.3"
 
 [dev-dependencies]
