--- a/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
@@ -33,12 +33,17 @@ tokio = { version = "1.46.1", features = [
   "rt-multi-thread",
   "macros",
   "time",
+  "signal",
 ] }
 tower-http = { version = "0.6", features = ["cors"] }
 tracing = "0.1"
+tracing-appender = "0.2"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 uuid = { version = "1.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
 assert_cmd = "2"
 predicates = "3"
+
+[features]
+file-logging = []
