--- a/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
+++ b/openraft_workspace_example/chitchat_openraft_axum_example/Cargo.toml
@@ -16,6 +16,7 @@ axum = { version = "0.8", features = ["macros"] }
 base64 = "0.22.1"
 bincode = "2"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat", rev = "c6f7809cd782173e8dbddf79e25d9cb40c9c14a4" }
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.0", features = ["derive"] }
 cool-id-generator = "1"
 itertools = "0.14"
