--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -5,6 +5,7 @@ resolver = "2"
 members = [
   "solana_program_hello_example",
   "solana_program_entry_example",
+   "solana_program_entry_client_example",
   # "anchor_mycalculatordapp",
   "solana_serialize_deserialize_example",
   "solana_handle_event_example",
