--- a/solana_workspace_example/solana_program_entry_client_example/Cargo.toml
+++ b/solana_workspace_example/solana_program_entry_client_example/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "solana_program_entry_client_example"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 borsh = "1.5.7"
+dotenvy = "0.15"
+serde_json = "1.0"
 solana-client = "2.3.4"
 solana-program = "2.3.0"
 solana-sdk = "2.3.1"
