--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -23,4 +23,5 @@ members = [
   "solana_raw_integer_example",
   "solana_raw_integer_client_example",
   "anchor_client_async_example",
+  "solana_instruction_example",
 ]
