add solana explain transaction example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -24,4 +24,5 @@ members = [
   "solana_raw_integer_client_example",
   "anchor_client_async_example",
   "solana_instruction_example",
+  "solana_explain_transaction_example",
 ]
