add solana compute budget instruction example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -25,4 +25,5 @@ members = [
   "anchor_client_async_example",
   "solana_instruction_example",
   "solana_explain_transaction_example",
+  "solana_compute_budget_instruction_example",
 ]
