add create system account example

--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -26,4 +26,5 @@ members = [
   "solana_instruction_example",
   "solana_explain_transaction_example",
   "solana_compute_budget_instruction_example",
+  "create_system_account_example",
 ]
