--- a/rand_workspace_example/Cargo.toml
+++ b/rand_workspace_example/Cargo.toml
@@ -11,4 +11,5 @@ members = [
   "rand_rngcore_example",
   "rand_rng_trait_enum_example",
   "rand_rng_trait_enum_example2",
+  "rand_distributed_example",
 ]
