--- a/sui_workspace_example/sui_event_example/Cargo.toml
+++ b/sui_workspace_example/sui_event_example/Cargo.toml
@@ -9,6 +9,7 @@ futures = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
+sui-types = { git = "https://github.com/mystenlabs/sui" }
 tokio = { version = "1.47", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -20,3 +21,7 @@ path = "src/main.rs"
 [[bin]]
 name = "advanced_example"
 path = "src/advanced_example.rs"
+
+[[bin]]
+name = "polling_example"
+path = "src/polling_example.rs"
