--- a/leptos_workspace_example/axum-js-ssr/Cargo.toml
+++ b/leptos_workspace_example/axum-js-ssr/Cargo.toml
@@ -15,10 +15,10 @@ html-escape = "0.2"
 http = "1"
 http-body-util = { version = "0.1", optional = true }
 js-sys = { version = "0.3", optional = true }
-leptos = { version = "0.8.0-beta", features = ["nightly"] }
-leptos_axum = { version = "0.8.0-beta", optional = true }
-leptos_meta = { version = "0.8.0-beta" }
-leptos_router = { version = "0.8.0-beta", features = ["nightly"] }
+leptos = { version = "0.8.6", features = ["nightly"] }
+leptos_axum = { version = "0.8.5", optional = true }
+leptos_meta = { version = "0.8.5" }
+leptos_router = { version = "0.8.5", features = ["nightly"] }
 serde = { version = "1", features = ["derive"] }
 thiserror = "2"
 tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
