--- a/leptos_workspace_example/leptos_ws_axum_example/Cargo.toml
+++ b/leptos_workspace_example/leptos_ws_axum_example/Cargo.toml
@@ -13,14 +13,14 @@ console_error_panic_hook = "0.1"
 console_log = "1"
 futures = { version = "0.3.31", default-features = false, optional = true }
 http = "1.3"
-leptos = { version = "0.8.0-beta" }
-leptos_axum = { version = "0.8.0-beta", optional = true }
-leptos_ws = "0.8.0-beta"
+leptos = { version = "0.8.6" }
+leptos_axum = { version = "0.8.5", optional = true }
+leptos_ws = "0.8.0-rc2"
 log = "0.4"
 serde = { version = "1", features = ["derive"] }
-server_fn = "0.8.0-beta"
+server_fn = "0.8.5"
 simple_logger = "5"
-tokio = { version = "1.44", features = [
+tokio = { version = "1.47", features = [
   "rt",
   "macros",
   "rt-multi-thread",
