--- a/axum_workspace_example/axum_ssr_react_example/Cargo.toml
+++ b/axum_workspace_example/axum_ssr_react_example/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2024"
 axum = "0.8.4"
 ssr_rs = "0.8.3"
 tokio = { version = "1.47.1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
