--- a/axum_workspace_example/axum_ssr_react_example/Cargo.toml
+++ b/axum_workspace_example/axum_ssr_react_example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 axum = "0.8.4"
 chrono = { version = "0.4", features = ["serde"] }
+once_cell = "1.20.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ssr_rs = "0.8.3"
