--- a/axum_workspace_example/axum_ssr_react_example/client/package.json
+++ b/axum_workspace_example/axum_ssr_react_example/client/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "fast-text-encoding": "^1.0.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "stream-chat": "^9.14.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
