--- a/rusty_v8_workspace_example/deno_runtime_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_example/Cargo.toml
@@ -8,6 +8,6 @@ deno_core = "0.354.0"
 deno_fs = "0.122.0"
 deno_permissions = "0.71.0"
 deno_resolver = "0.43.0"
-deno_runtime = "0.220.0"
+deno_runtime = { version = "0.220.0", features = ["transpile"]}
 sys_traits = "0.1.17"
 tokio = { version = "1.47", features = ["full"] }
