--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -14,4 +14,5 @@ members = [
   "deno_runtime_example",
   "v8_promise_example",
   "deno_runtime_call_typescript_example",
+  "deno_runtime_test",
 ]
