--- a/rusty_v8_workspace_example/deno_runtime_axum_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_axum_example/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8", features = ["macros"] }
-deno_core = "0.354.0"
-deno_fs = "0.122.0"
-deno_permissions = "0.71.0"
+# deno_core = "0.354.0"
+# deno_fs = "0.122.0"
+# deno_permissions = "0.71.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
 sys_traits = "0.1.17"
