--- a/rusty_v8_workspace_example/deno_runtime_axum_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_axum_example/Cargo.toml
@@ -10,5 +10,6 @@ axum = { version = "0.8", features = ["macros"] }
 # deno_permissions = "0.71.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
+rand = "0.9"
 sys_traits = "0.1.17"
 tokio = { version = "1.47.1", features = ["full"] }
