--- a/rusty_v8_workspace_example/deno_runtime_axum_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_axum_example/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2024"
 [dependencies]
 async-trait = "0.1"
 axum = { version = "0.8", features = ["macros"] }
-# deno_core = "0.354.0"
+deno_ast = { version = "0.49.0", features = ["transpiling"] }
 deno_error = "0.7.0"
-# deno_fs = "0.122.0"
-# deno_permissions = "0.71.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
 dotenvy = "0.15.7"
 rand = "0.9"
+serde_json = "1.0"
 sys_traits = "0.1.17"
 tokio = { version = "1.47.1", features = ["full"] }
+ureq = "3.0.12"
 urlencoding = "2.1.3"
