--- a/rusty_v8_workspace_example/deno_runtime_call_typescript_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_call_typescript_example/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2024"
 deno_ast = { version = "0.49.0", features = ["transpiling"] }
 deno_core = "0.354.0"
 deno_error = "0.7.0"
-deno_fs = "0.122.0"
-deno_permissions = "0.71.0"
+# deno_fs = "0.122.0"
+# deno_permissions = "0.71.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
 sys_traits = "0.1.17"
