--- a/rusty_v8_workspace_example/deno_runtime_deno_lib_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_deno_lib_example/Cargo.toml
@@ -4,8 +4,20 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.95"
+async-trait = "0.1.85"
+deno_ast = { version = "0.46.0", features = ["transpiling"] }
+deno_core = "0.333.0"
+deno_graph = "0.97.0"
 deno_lib = "=0.30.0"
+deno_npm = "0.36.0"
+deno_npm_cache = "0.31.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
+deno_semver = "0.9.0"
+import_map = "0.20.1"
+indexmap = "2"
+once_cell = "1.19.0"
 sys_traits = "0.1.17"
 tokio = { version = "1.47.1", features = ["full"] }
+url = "2.5.4"
