add deno_core download example

--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -19,4 +19,5 @@ members = [
   # "deno_runtime_axum_example",
   "v8_js_example",
   "deno_runtime_deno_lib_example",
+  "deno_core_download_example",
 ]
