--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -20,4 +20,5 @@ members = [
   "v8_js_example",
   "deno_runtime_deno_lib_example",
   "deno_core_download_example",
+  "deno_core_parse_npm_example",
 ]
