add deno_core module loader example

--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -21,4 +21,5 @@ members = [
   "deno_runtime_deno_lib_example",
   "deno_core_download_example",
   "deno_core_parse_npm_example",
+  "deno_core_module_loader_example",
 ]
