add deno_core module loader example 2

--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -22,4 +22,5 @@ members = [
   "deno_core_download_example",
   "deno_core_parse_npm_example",
   "deno_core_module_loader_example",
+  "deno_core_module_loader_example2",
 ]
