--- a/rusty_v8_workspace_example/deno_runtime_deno_lib_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_runtime_deno_lib_example/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 async-trait = "0.1.88"
+base64 = "0.22.0"
 deno_ast = { version = "0.49.0", features = ["transpiling"] }
 deno_core = "0.355.0"
 deno_graph = "0.98.0"
@@ -15,9 +16,18 @@ deno_npm_cache = "0.31.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
 deno_semver = "0.9.0"
+dirs = "5.0.0"
+flate2 = "1.0"
 import_map = "0.23.0"
 indexmap = "2"
 once_cell = "1.21.3"
+reqwest = { version = "0.12.0", features = ["json"] }
+semver = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sha2 = "0.10"
 sys_traits = "0.1.17"
+tar = "0.4"
 tokio = { version = "1.47.1", features = ["full"] }
+tracing = "0.1"
 url = "2.5.4"
