--- a/rusty_v8_workspace_example/rust_deno_scripting/Cargo.toml
+++ b/rusty_v8_workspace_example/rust_deno_scripting/Cargo.toml
@@ -10,7 +10,8 @@ deno_core = "0.354"
 deno_error = "0.7"
 deno_resolver = "0.43"
 deno_runtime = { version = "0.220", features = ["transpile"] }
+node_resolver = "0.50.0"
 rustls = { version = "0.23", features = ["ring"] }
-sys_traits = "0.1.17"
+sys_traits = { version = "0.1.17", features = ["real"] }
 thiserror = "2"
 tokio = { version = "1", features = ["full"] }
