--- a/rusty_v8_workspace_example/rust_deno_scripting/Cargo.toml
+++ b/rusty_v8_workspace_example/rust_deno_scripting/Cargo.toml
@@ -5,13 +5,26 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1"
+base64 = "0.22.1"
 deno_ast = { version = "0.49", features = ["transpiling"] }
 deno_core = "0.354"
 deno_error = "0.7"
+deno_graph = "0.98.0"
 deno_resolver = "0.43"
 deno_runtime = { version = "0.220", features = ["transpile"] }
+deno_semver = "0.9.0"
+dirs = "6.0.0"
+flate2 = "1.1"
 node_resolver = "0.50.0"
+reqwest = { version = "0.12.22", features = ["json"] }
 rustls = { version = "0.23", features = ["ring"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+sha2 = "0.10"
 sys_traits = { version = "0.1.17", features = ["real"] }
+tar = "0.4"
 thiserror = "2"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
+url = "2.5.4"
+walkdir = "2.4"
