add deno_lib libmainworker example

--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -28,4 +28,12 @@ members = [
   "deno_node_runtime_example",
   "deno_graph_basic_example",
   "deno_resolver_deno_npm_example",
+  "deno_lib_libmainworker_example",
 ]
+
+# Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
+[profile.dev.package.v8]
+opt-level = 1
+
+[profile.release.package.v8]
+opt-level = 3
