add rslock basic example

--- a/redis_workspace_example/Cargo.toml
+++ b/redis_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
   "redis_set_example",
   "distributed_lock_example",
   "cluster_distributed_lock_example",
+  "rslock_basic_example",
 ]
