add deno_npm example

--- a/deno_component_workspace_example/Cargo.toml
+++ b/deno_component_workspace_example/Cargo.toml
@@ -32,6 +32,7 @@ members = [
   "deno_web_blobstore_example",
   "deno_os_example",
   "byonm_npm_resolver_example",
+  "deno_npm_example",
 ]
 
 # Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
