add deno_cache_dir example

--- a/deno_component_workspace_example/Cargo.toml
+++ b/deno_component_workspace_example/Cargo.toml
@@ -33,6 +33,7 @@ members = [
   "deno_os_example",
   "byonm_npm_resolver_example",
   "deno_npm_example",
+  "deno_cache_dir_example",
 ]
 
 # Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
