add deno_core call js example

--- a/deno_component_workspace_example/Cargo.toml
+++ b/deno_component_workspace_example/Cargo.toml
@@ -34,6 +34,7 @@ members = [
   "byonm_npm_resolver_example",
   "deno_npm_example",
   "deno_cache_dir_example",
+  "deno_core_call_js_example",
 ]
 
 # Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
