--- a/deno_component_workspace_example/deno/Cargo.toml
+++ b/deno_component_workspace_example/deno/Cargo.toml
@@ -97,8 +97,8 @@ libz-sys = "1.1.22"
 log = { version = "0.4.28", features = ["serde"] }
 lol_html = "2.6.0"
 lsp-types = "0.97.0"
-malva = "0.14.3"
-markup_fmt = "0.24.0"
+malva = "=0.12.1"
+markup_fmt = "=0.22.0"
 memchr = "2.7.6"
 node_resolver = { version = "0.55.0", features = ["graph", "sync"] }
 notify = "=6.1.1"
@@ -113,7 +113,7 @@ pathdiff = "0.2.3"
 percent-encoding = "2.3.2"
 phf = { version = "=0.11", features = ["macros"] }
 pretty_yaml = "=0.5.0"
-quick-junit = "0.5.1"
+quick-junit = "=0.3.6"
 rand = { version = "=0.8.5", features = ["small_rng"] }
 regex = "1.11.3"
 rustc-hash = "2.1.1"
@@ -121,10 +121,11 @@ rustls = { version = "=0.23.28", default-features = false, features = ["logging"
 rustyline = "=13.0.0"
 rustyline-derive = "=0.7.0"
 serde = { version = "=1.0.221", features = ["derive"] }
+serde_json = "1.0.145"
 serde_repr = "0.1.20"
 sha2 = "0.10.9"
 spki = { version = "0.7.3", features = ["pem"] }
-sqlformat = "0.4.0"
+sqlformat = "=0.3.5"
 strsim = "0.11.1"
 sys_traits = { version = "0.1.17", features = ["getrandom", "filetime", "libc", "real", "strip_unc", "winapi"] }
 tar = "=0.4.43"
@@ -171,13 +172,13 @@ sys_traits = { version = "0.1.17", features = ["memory"] }
 
 [build-dependencies]
 deno_core = { version = "0.362.0", features = ["include_js_files_for_snapshotting"] }
+deno_error = "=0.7.0"
 deno_runtime = { version = "0.225.0", features = ["include_js_files_for_snapshotting", "only_snapshotted_js_sources"] }
+flate2 = { version = "1.1.2", features = ["default"] }
 lazy-regex = "3.4.1"
 serde = { version = "=1.0.221", features = ["derive"] }
 serde_json = "1.0.145"
 zstd = "=0.13.2"
-flate2 = { version = "1.1.2", features = ["default"] }
-deno_error = "=0.7.0"
 
 [features]
 default = ["upgrade", "__vendored_zlib_ng"]
